k8s/infra/base/network/gateway/route-authelia.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: auth
  labels:
    gateway-access: internal
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'auth.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Real-IP
                value: ${remote_addr}
      backendRefs:
        - name: authelia
          port: 9091
          filters:
            - type: RequestRedirect
              requestRedirect:
                scheme: https
