k8s/infra/base/network/gateway/route-home-assistant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'haos.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
